add datetime to plugin
